# convert_wiki

./: .gitignore  Cargo.toml
src/: convert_file.rs  create_commit.rs  create_repo.rs  fetch_all_pages.rs  fetch_revisions.rs  get_author.rs  get_author_data.rs  handle_git.rs  main.rs  parse_xml_dump.rs
src/snapshots/: convert_wiki__fetch_all_pages__tests__fetch_all_pages-2.snap  convert_wiki__fetch_all_pages__tests__fetch_all_pages.snap  convert_wiki__fetch_all_pages__tests__fetch_all_pages_talk_namespace-2.snap  convert_wiki__fetch_all_pages__tests__fetch_all_pages_talk_namespace.snap  convert_wiki__fetch_revisions__tests__fetch_after-2.snap  convert_wiki__fetch_revisions__tests__fetch_after.snap  convert_wiki__fetch_revisions__tests__fetch_content-2.snap  convert_wiki__fetch_revisions__tests__fetch_content-3.snap  convert_wiki__fetch_revisions__tests__fetch_content-4.snap  convert_wiki__fetch_revisions__tests__fetch_content.snap  convert_wiki__get_author__tests__load_author_data.snap  convert_wiki__get_author_data__tests__load_author_data.snap  convert_wiki__parse_xml_dump__tests__load_arch_dump.snap
test_files/: ArchWiki-20230802150007.xml  example_names.csv
